Add auto ua language selection

--- a/ArduBlock.html
+++ b/ArduBlock.html
@@ -7,7 +7,7 @@
 <title>ArduBlock</title>
 <link rel="shortcut icon" type="image/x-icon" href="./com/media/favicon.ico" />
 <script language="JavaScript"> 
-  window.location.href = "./app/demos/code/index.html?lang=ry"
+  window.location.href = "./app/demos/code/index.html?lang=ua"
 </script> 
 
  
