Add verify and compile UI

--- a/app/demos/code/index.html
+++ b/app/demos/code/index.html
@@ -300,6 +300,19 @@
                         <td id="tab_arduino" class="taboff">Arduino</td>
                         <td class="tabmin">&nbsp;</td>
                         <td id="tab_xml" class="taboff">XML</td>
+                        
+                        <td id="tab_upload" class="tab_upload">
+                            <select name="board" id="board_select">
+                                <option value="Arduino Uno">Arduino Uno</option>
+                            </select>
+
+                            <select name="comport" id="comport_select">
+                                <option value="com1">COM1</option>
+                            </select>
+
+                            <button id="verifyButton" title="...">✓</button>
+                            <button id="uploadButton" title="...">➔</button>
+                        </td>
 
                         <td class="tabmax">
 
